--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -8,4 +8,5 @@
   </mat-tab>
 </mat-tab-group>
 
-<app-current-training *ngIf="ongoingTraining" (trainingExit)="ongoingTraining = false"></app-current-training>
+<!-- <app-current-training *ngIf="ongoingTraining" (trainingExit)="ongoingTraining = false"></app-current-training> -->
+<app-current-training *ngIf="ongoingTraining"></app-current-training>
