--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -1,3 +1,9 @@
+<div fxLayoutAlign="center center">
+  <mat-form-field fxFlex="40%">
+    <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
+  </mat-form-field>
+</div>
+
 <mat-table [dataSource]="dataSource" matSort>
 
   <ng-container matColumnDef="date">
@@ -29,3 +35,7 @@
   <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 
 </mat-table>
+
+<mat-paginator [pageSize]="1" [pageSizeOptions]="[1, 5, 10, 20]">
+
+</mat-paginator>
