--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -7,13 +7,14 @@
       </mat-card-title>
       <mat-card-content fxLayoutAlign="center">
 
-        <mat-form-field>
+        <mat-form-field *ngIf="!isLoading && exercises">
           <mat-select placeholder="Choose Exercise" ngModel name="exercise" required>
             <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
               {{ exercise.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
+        
         <mat-spinner *ngIf="isLoading"></mat-spinner>
 
       </mat-card-content>
